project/logs/20250415_215605.log
Use Adapter : NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

Complete create DeD12Device!!!

Begin CompileShader, path:Object3D.VS.hlsl, profile:vs_6_0

Compile Succeeded, path:Object3D.VS.hlsl, profile:vs_6_0

Begin CompileShader, path:Object3D.PS.hlsl, profile:ps_6_0

Object3D.PS.hlsl:5:16: error: use of undeclared identifier 'Material'
ConstantBuffer<Material> gMaterial : register(b0);
               ^
Object3D.PS.hlsl:6:8: error: redefinition of 'PixelShaderOutput'
struct PixelShaderOutput{
       ^
Object3D.PS.hlsl:1:8: note: previous definition is here
struct PixelShaderOutput{
       ^

